<resources>
    <string name="app_name">EatsExpress</string>
    <string name="eatsExpress">EatsExpress</string>
    <string name="deliver_favorite_food">Deliver Favorite Food</string>
    <string name="enjoy_restaurant_quality_meals_n_at_home">Enjoy Restaurant Quality Meals\n at Home</string>
    <string name="next">Next</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or Login with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="or_signup_with">Or Signup with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="description">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>