<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/home"
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"/>

    <item android:title="@string/cart"
        android:id="@+id/cartFragment"
        android:icon="@drawable/baseline_add_shopping_cart_24"/>

    <item android:title="@string/search"
        android:id="@+id/searchFragment"
        android:icon="@drawable/baseline_youtube_searched_for_24"/>

    <item android:title="@string/history"
        android:id="@+id/historyFragment"
        android:icon="@drawable/baseline_history_24"/>

    <item android:title="@string/profile"
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_outline_24"/>

</menu>