<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/dp_95"
        android:layout_height="@dimen/dp_95"
        android:layout_marginTop="@dimen/dp_50"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eats_express"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/yeon_sung"
        android:padding="@dimen/dp_10"
        android:text="@string/eatsExpress"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/deliver_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/deliver_favorite_food"
        android:textColor="@color/green"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eats_express" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:fontFamily="@font/lato"
        android:text="@string/login_to_your_account"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deliver_food" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_20"
        app:boxStrokeColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/baseline_mail_outline_24"
            android:drawablePadding="@dimen/dp_15"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordText"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        app:boxStrokeColor="@color/gray"
        app:layout_constraintEnd_toEndOf="@id/emailText"
        app:layout_constraintStart_toStartOf="@id/emailText"
        app:layout_constraintTop_toBottomOf="@id/emailText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="@dimen/dp_15"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        android:fontFamily="@font/yeon_sung"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:textAllCaps="false"
        android:fontFamily="@font/lato"
        android:text="@string/facebook"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/facebook"
        android:drawablePadding="@dimen/dp_15"
        android:padding="@dimen/dp_30"
        app:layout_constraintEnd_toStartOf="@+id/google"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:textAllCaps="false"
        android:fontFamily="@font/lato"
        android:text="@string/google"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/google"
        android:drawablePadding="@dimen/dp_15"
        android:padding="@dimen/dp_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/yeon_sung"
        android:backgroundTint="@color/green"
        app:cornerRadius="@dimen/dp_20"
        android:paddingStart="@dimen/dp_40"
        android:paddingEnd="@dimen/dp_40"
        android:paddingTop="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_25"
        app:layout_constraintTop_toBottomOf="@id/facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dontAccount"
        />

    <TextView
        android:id="@+id/dontAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/lato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signup"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/green"
        android:fontFamily="@font/lato"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/dp_5"
        app:layout_constraintStart_toEndOf="@id/dontAccount"
        app:layout_constraintTop_toTopOf="@id/dontAccount"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>