<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="@dimen/dp_155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/eats_express"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eatsExpress"
        android:fontFamily="@font/yeon_sung"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:layout_marginTop="@dimen/dp_53"
        />

    <TextView
        android:id="@+id/deliver_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_favorite_food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eats_express"
        android:fontFamily="@font/lato"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>