<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/burgerImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/burger_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_100"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/enjoyFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enjoy_restaurant_quality_meals_n_at_home"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:textAlignment="center"
        android:fontFamily="@font/yeon_sung"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/burgerImage"
        android:layout_marginTop="@dimen/dp_20"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/yeon_sung"
        android:backgroundTint="@color/green"
        android:paddingTop="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_15"
        app:cornerRadius="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_50"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>