<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseLocationActivity">

    <TextView
        android:id="@+id/chooseLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_location"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:fontFamily="@font/yeon_sung"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_100"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/baseline_arrow_drop_down_circle_24"
        app:endIconTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/chooseLocation"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        app:boxStrokeWidth="@dimen/dp_0"
        app:boxStrokeWidthFocused="@dimen/dp_0"
        >
        <AutoCompleteTextView
            android:id="@+id/listOfLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:text="@string/choose_location"
            android:fontFamily="@font/lato"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/lato"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dp_50"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>